# hackathon_team_9

./: .gitignore  .local-env  API_key  Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt
app/: app.py  constants.py  news_fetcher.py  price_fetcher.py  ret_prompt.py
app/templates/: index.html
utils/: utils.py
