[tool.poetry]
name = "hackathon-team-9"
version = "0.1.0"
description = ""
authors = ["Wladislaw Strecker <wladislawstrecker@gmail.com>"]
readme = "README.md"
packages = [{include = "hackathon_team_9"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
example = "utils.utils.main"
